<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/game_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/paper_background"
    android:minHeight="250dp"
    tools:context="edu.ramapo.ajha.konane.GameActivity"
    tools:layout_editor_absoluteY="25dp">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/best_move"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </TableLayout>

    <EditText
        android:id="@+id/player1"
        android:layout_width="96dp"
        android:layout_height="60dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/black_log"
        android:ems="4"
        android:enabled="false"
        android:lines="1"
        android:text="@string/Black"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        android:visibility="visible"
        app:layout_constraintEnd_toStartOf="@+id/player1_score"
        app:layout_constraintStart_toEndOf="@+id/tableLayout"
        app:layout_constraintTop_toBottomOf="@+id/move_turn" />

    <EditText
        android:id="@+id/player1_score"
        android:layout_width="58dp"
        android:layout_height="25dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:background="@android:color/background_dark"
        android:ems="4"
        android:enabled="false"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/player1"
        app:layout_constraintTop_toBottomOf="@+id/current_move" />

    <EditText
        android:id="@+id/player2"
        android:layout_width="96dp"
        android:layout_height="60dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/white_log"
        android:ems="4"
        android:enabled="false"
        android:lines="1"
        android:text="@string/White"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/player2_score"
        app:layout_constraintStart_toEndOf="@+id/tableLayout"
        app:layout_constraintTop_toBottomOf="@+id/player1" />

    <EditText
        android:id="@+id/player2_score"
        android:layout_width="58dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:background="@android:color/background_light"
        android:ems="4"
        android:enabled="false"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/player2"
        app:layout_constraintTop_toBottomOf="@+id/player1_score" />

    <Button
        android:id="@+id/pass_button"
        android:layout_width="280dp"
        android:layout_height="96dp"
        android:layout_marginBottom="76dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/wood_background"
        android:onClick="pass_button"
        android:text="@string/pass"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/current_move"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:ems="2"
        android:enabled='false'
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/move_turn"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/move_turn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="24dp"
        android:enabled="false"
        android:text="@string/current_player"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
        android:textColor="@android:color/background_dark"
        app:layout_constraintEnd_toStartOf="@+id/current_move"
        app:layout_constraintStart_toEndOf="@+id/tableLayout"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/move_button"
        android:layout_width="280dp"
        android:layout_height="96dp"
        android:layout_marginBottom="76dp"
        android:layout_marginEnd="65dp"
        android:background="@drawable/wood_background"
        android:onClick="move_button"
        android:text="@string/move_button"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:textColor="@android:color/holo_green_light"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/pass_button" />

    <EditText
        android:id="@+id/move_message"
        android:layout_width="620dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:enabled="false"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/pass_button"
        app:layout_constraintEnd_toEndOf="parent"
        tools:textAlignment="center" />

    <Button
        android:id="@+id/next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="22dp"
        android:onClick="next_button"
        android:singleLine="false"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/move_message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/algo_spinner"
        app:layout_constraintTop_toBottomOf="@+id/player2"
        app:layout_constraintVertical_bias="0.0"
        tools:textAlignment="center" />

    <Button
        android:id="@+id/reset_button"
        android:layout_width="200dp"
        android:layout_height="44dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="240dp"
        android:layout_marginTop="8dp"
        android:onClick="reset_button"
        android:text="@string/reset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pass_button"
        app:layout_constraintWidth_max="120dp"
        app:layout_constraintWidth_min="60dp" />

    <Spinner
        android:id="@+id/algo_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="130dp"
        android:layout_marginTop="38dp"
        android:visibility="visible"
        app:layout_constraintEnd_toStartOf="@+id/next_button"
        app:layout_constraintStart_toEndOf="@+id/tableLayout"
        app:layout_constraintTop_toBottomOf="@+id/player2" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="44sp"
        android:layout_height="44sp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/save_button"
        android:onClick="save_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/alphabeta"
        android:layout_width="148dp"
        android:layout_height="35dp"
        android:layout_marginEnd="22dp"
        android:layout_marginTop="40dp"
        android:singleLine="false"
        android:text="αβ"
        android:textIsSelectable="false"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/next_button" />

    <Button
        android:id="@+id/best_move"
        android:layout_width="434dp"
        android:layout_height="79dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="40dp"
        android:onClick="best_move"
        android:singleLine="false"
        android:text="PRESS FOR BEST MOVE"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/alphabeta"
        app:layout_constraintTop_toBottomOf="@+id/next_button" />

    <Spinner
        android:id="@+id/ply_spinner"
        android:layout_width="70dp"
        android:layout_height="30dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alphabeta" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="76dp"
        android:layout_height="29dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="20dp"
        android:enabled="false"
        android:text="Ply Cut-off"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/ply_spinner"
        app:layout_constraintTop_toBottomOf="@+id/alphabeta" />

    <TextView
        android:id="@+id/search_time"
        android:layout_width="434dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:enabled="false"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toStartOf="@+id/alphabeta"
        app:layout_constraintTop_toBottomOf="@+id/best_move" />


</android.support.constraint.ConstraintLayout>
